Prevent the right-to-left directional hook from overlapping the caret and make both directions thinner. Bug 264903, r=mkaply, aaronleventhal, sr=rbs.